--- a/CascadeSolution/Cascade.Data/Cascade.Data.csproj
+++ b/CascadeSolution/Cascade.Data/Cascade.Data.csproj
@@ -97,6 +97,8 @@
     <Compile Include="Models\MSI_MediaForm.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\MSI_MediaRequestResponse.cs" />
+    <Compile Include="Models\MSI_MediaTypes.cs" />
     <Compile Include="Models\MSI_OwnerResponses.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -170,9 +172,11 @@
     <Compile Include="Models\RAGENCY.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RINTRATE.cs" />
     <Compile Include="Models\RPRODCDE.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RSTATU.cs" />
     <Compile Include="Models\RTRANCDE.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
