--- a/CascadeSolution/Cascade.Helpers/Cascade.Helpers.csproj
+++ b/CascadeSolution/Cascade.Helpers/Cascade.Helpers.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColorCodeHelper.cs" />
+    <Compile Include="DateHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
