--- a/CascadeSolution/Cascade.Web/Web.config
+++ b/CascadeSolution/Cascade.Web/Web.config
@@ -17,7 +17,7 @@
   </connectionStrings>
   <cascadeCutomGroup>
     <cascadeMenu>
-      <menu Id="1" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="1" Text="Recourse" Area="Recourse" />
+      <menu Id="1" Action="Index" Controller="Home" Roles="user,agency" IsVisible="false" IsActive="true" ParentId="0" SortOrder="1" Text="Recourse" Area="Recourse" />
       <menu Id="2" Action="Index" Controller="Home" Roles="user,agency" IsVisible="false" IsActive="true" ParentId="0" SortOrder="2" Text="Collections" Area="Collections" />
       <menu Id="3" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="3" Text="Investor Mgt" Area="InvestorManagement" />
       <menu Id="4" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="4" Text="Analytics &amp; Simulation" Area="AnalyticsSimulation" />
@@ -59,6 +59,7 @@
       <menu Id="32" Action="ReportRC" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="8" Text="Resolved Complaints" Area="Compliance" />
       <menu Id="33" Action="ReportSOA" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="5" Text="Submitted for Owner Action" Area="Compliance" />
       <menu Id="34" Action="ReportORP" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="6" Text="Owner Response In Progress" Area="Compliance" />
+      <menu Id="35" Action="MediaRequest" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="1" SortOrder="1" Text="Media Request" Area="Recourse" />
     </cascadeMenu>
   </cascadeCutomGroup>
   <appSettings>
