--- a/CascadeSolution/Cascade.Web/Cascade.Web.csproj
+++ b/CascadeSolution/Cascade.Web/Cascade.Web.csproj
@@ -483,7 +483,7 @@
     <Content Include="Areas\Recourse\Views\Web.config" />
     <Content Include="Areas\Recourse\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Recourse\Views\Media\MediaRequest.cshtml" />
-    <Content Include="Areas\Recourse\Views\Media\MediaRequestCreate.cshtml" />
+    <Content Include="Areas\Recourse\Views\Media\Create.cshtml" />
     <Content Include="Areas\Recourse\Views\Media\_mediaRequests.cshtml" />
     <None Include="Areas\Reports\Views\Cascade0206Deploy.rar" />
     <Content Include="Areas\Reports\Views\Collections\PortfolioOwnerBreakDown.cshtml" />
