--- a/CascadeSolution/Cascade.Data/Cascade.Data.csproj
+++ b/CascadeSolution/Cascade.Data/Cascade.Data.csproj
@@ -91,16 +91,20 @@
     <Compile Include="Models\MSI_DPSForm.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\MSI_Enums.cs" />
     <Compile Include="Models\MSI_FinalActionsteps.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\MSI_MediaForm.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\MSI_MediaRequestedTypes.cs">
+    <Compile Include="Models\MSI_MediaRequestResponse.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\MSI_MediaRequestResponse.cs">
+    <Compile Include="Models\MSI_MediaRequestStatus.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\MSI_MediaRequestTypes.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\MSI_MediaTypes.cs">
