--- a/CascadeSolution/Cascade.Web/Web.config
+++ b/CascadeSolution/Cascade.Web/Web.config
@@ -60,6 +60,7 @@
       <menu Id="33" Action="ReportSOA" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="5" Text="Submitted for Owner Action" Area="Compliance" />
       <menu Id="34" Action="ReportORP" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="6" Text="Owner Response In Progress" Area="Compliance" />
       <menu Id="35" Action="Create" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="1" SortOrder="1" Text="Request - By Individual Account" Area="Recourse" />
+      <menu Id="35" Action="MediaRequestNotFulfilled" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="1" SortOrder="2" Text="Media Request Not Yet Fulfilled" Area="Recourse" />
     </cascadeMenu>
   </cascadeCutomGroup>
   <appSettings>
