--- a/CascadeSolution/Cascade.Web/Web.config
+++ b/CascadeSolution/Cascade.Web/Web.config
@@ -16,8 +16,9 @@
     <add name="CascadeDBEntities" connectionString="metadata=res://*/Models.CascadeEDM.csdl|res://*/Models.CascadeEDM.ssdl|res://*/Models.CascadeEDM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=CascadeDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <cascadeCutomGroup>
+
     <cascadeMenu>
-      <menu Id="1" Action="Index" Controller="Home" Roles="user,agency" IsVisible="false" IsActive="true" ParentId="0" SortOrder="1" Text="Recourse" Area="Recourse" />
+      <menu Id="1" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="1" Text="Recourse" Area="Recourse" />
       <menu Id="2" Action="Index" Controller="Home" Roles="user,agency" IsVisible="false" IsActive="true" ParentId="0" SortOrder="2" Text="Collections" Area="Collections" />
       <menu Id="3" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="3" Text="Investor Mgt" Area="InvestorManagement" />
       <menu Id="4" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="4" Text="Analytics &amp; Simulation" Area="AnalyticsSimulation" />
@@ -29,10 +30,10 @@
       <menu Id="10" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="0" SortOrder="7" Text="Portfolio" Area="Portfolio" />
       <menu Id="11" Action="Index" Controller="AddForm" Roles="user" IsVisible="false" IsActive="true" ParentId="10" SortOrder="1" Text="Add" Area="Portfolio" />
       <menu Id="12" Action="ViewDPS" Controller="DPS" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="2" Text="DPS-View/Edit" Area="Recourse" />
-      <menu Id="13" Action="Index" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="3" Text="Media-Add Form" Area="Recourse" />
-      <menu Id="14" Action="ViewMedia" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="4" Text="Media-View/Edit" Area="Recourse" />
-      <menu Id="15" Action="Index" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="5" Text="Recall-Add Form" Area="Recourse" />
-      <menu Id="16" Action="ViewRecall" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="6" Text="Recall-View/Edit" Area="Recourse" />
+      <menu Id="13" Action="MediaUpload" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="3" Text="Media Upload" Area="Recourse" />
+      <menu Id="14" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="4" Text="Media Fulfillment" Area="Recourse" />
+      <menu Id="15" Action="Index" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="6" Text="Recall-Add Form" Area="Recourse" />
+      <menu Id="16" Action="ViewRecall" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="7" Text="Recall-View/Edit" Area="Recourse" />
       <menu Id="17" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="false" ParentId="0" SortOrder="8" Text="People" Area="People" />
       <menu Id="18" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="false" ParentId="0" SortOrder="9" Text="Money" Area="Money" />
       <menu Id="19" Action="Add" Controller="Home" Roles="user" IsVisible="false" IsActive="false" ParentId="17" SortOrder="1" Text="Add Record" Area="People" />
@@ -59,8 +60,14 @@
       <menu Id="32" Action="ReportRC" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="8" Text="Resolved Complaints" Area="Compliance" />
       <menu Id="33" Action="ReportSOA" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="5" Text="Submitted for Owner Action" Area="Compliance" />
       <menu Id="34" Action="ReportORP" Controller="Home" Roles="user" IsVisible="false" IsActive="true" ParentId="24" SortOrder="6" Text="Owner Response In Progress" Area="Compliance" />
-      <menu Id="35" Action="Create" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="1" SortOrder="1" Text="Request - By Individual Account" Area="Recourse" />
-      <menu Id="35" Action="MediaRequestNotFulfilled" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="1" SortOrder="2" Text="Media Request Not Yet Fulfilled" Area="Recourse" />
+      <menu Id="35" Action="Index" Controller="Home" Roles="agency" IsVisible="false" IsActive="true" ParentId="0" SortOrder="1" Text="Media" Area="Recourse" />
+      <menu Id="36" Action="Create" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="35" SortOrder="1" Text="Request - By Individual Account" Area="Recourse" />
+      <menu Id="37" Action="MediaRequestReadyDownload" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="35" SortOrder="2" Text="Media Ready For Download" Area="Recourse" />
+      <menu Id="38" Action="MediaRequestNotFulfilled" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="35" SortOrder="3" Text="Media Request Not Yet Fulfilled" Area="Recourse" />
+      <menu Id="39" Action="MediaUpload" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="7" Text="Media Upload" Area="Recourse" />
+      <menu Id="40" Action="Create" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="5" Text="Media Request" Area="Recourse" />
+      <menu Id="41" Action="Create" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="40" SortOrder="1" Text="Start New Request" Area="Recourse" />
+      <menu Id="42" Action="Create" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="40" SortOrder="2" Text="Update Exisiting Request" Area="Recourse" />
     </cascadeMenu>
   </cascadeCutomGroup>
   <appSettings>
@@ -81,6 +88,8 @@
     <authorization>
       <deny users="?" />
     </authorization>
+    <!--For Upload File Size-->
+    <httpRuntime maxRequestLength ="102400" executionTimeout ="240"/>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
