--- a/CascadeSolution/Cascade.Web/Web.config
+++ b/CascadeSolution/Cascade.Web/Web.config
@@ -31,7 +31,7 @@
       <menu Id="11" Action="Index" Controller="AddForm" Roles="user" IsVisible="false" IsActive="true" ParentId="10" SortOrder="1" Text="Add" Area="Portfolio" />
       <menu Id="12" Action="ViewDPS" Controller="DPS" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="2" Text="DPS-View/Edit" Area="Recourse" />
       <menu Id="13" Action="MediaUpload" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="3" Text="Media Upload" Area="Recourse" />
-      <menu Id="14" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="4" Text="Media Fulfillment" Area="Recourse" />
+      <menu Id="14" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="4" Text="Media Fulfillment" Area="Recourse"  Parameters="id" ParametersVals="ByAgency" />
       <menu Id="15" Action="Index" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="6" Text="Recall-Add Form" Area="Recourse" />
       <menu Id="16" Action="ViewRecall" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="7" Text="Recall-View/Edit" Area="Recourse" />
       <menu Id="17" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="false" ParentId="0" SortOrder="8" Text="People" Area="People" />
@@ -63,10 +63,10 @@
       <menu Id="35" Action="Index" Controller="Home" Roles="agency" IsVisible="false" IsActive="true" ParentId="0" SortOrder="1" Text="Media" Area="Recourse" />
       <menu Id="36" Action="Create" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="35" SortOrder="1" Text="Request - By Individual Account" Area="Recourse" />
       <menu Id="37" Action="MediaRequestReadyDownload" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="35" SortOrder="2" Text="Media Ready For Download" Area="Recourse" />
-      <menu Id="38" Action="MediaRequestNotFulfilled" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="35" SortOrder="3" Text="Media Request Not Yet Fulfilled" Area="Recourse" />
+      <menu Id="38" Action="MediaRequestNotFulfilled" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="35" SortOrder="3" Text="Media Request Not Yet Fulfilled" Area="Recourse" Parameters="id" ParametersVals="ByAgency"/>
       <menu Id="39" Action="Create" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="5" Text="Media Request" Area="Recourse" />
       <menu Id="40" Action="Create" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="39" SortOrder="1" Text="Start New Request" Area="Recourse" />
-      <menu Id="41" Action="Create" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="39" SortOrder="2" Text="Update Exisiting Request" Area="Recourse" />
+      <menu Id="41" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="39" SortOrder="2" Text="Update Exisiting Request" Area="Recourse" Parameters="id" ParametersVals="All" />
     </cascadeMenu>
   </cascadeCutomGroup>
   <appSettings>
