--- a/CascadeSolution/Cascade.Web/Web.config
+++ b/CascadeSolution/Cascade.Web/Web.config
@@ -111,6 +111,18 @@
         <clear />
         <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="CascadeWeb" />
       </providers>
+      <properties>
+        <add name="FirstName"
+						  type="System.String"
+						  allowAnonymous="false" />
+
+        <add name="LastName"
+						  type="System.String"
+						  allowAnonymous="false" />
+        <add name="RoleEntityValue"
+             type="System.String"
+             allowAnonymous="false" />
+      </properties>
     </profile>
     <roleManager enabled="true">
       <providers>
