--- a/CascadeSolution/Cascade.Web/Web.config
+++ b/CascadeSolution/Cascade.Web/Web.config
@@ -106,23 +106,11 @@
         <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="1" passwordAttemptWindow="10" applicationName="CascadeWeb" />
       </providers>
     </membership>
-    <profile enabled="true">
+    <profile enabled="true" defaultProvider="AspNetSqlProfileProvider" inherits="Cascade.Web.Models.AccountProfile">
       <providers>
         <clear />
         <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="CascadeWeb" />
       </providers>
-      <properties>
-        <add name="FirstName"
-						  type="System.String"
-						  allowAnonymous="false" />
-
-        <add name="LastName"
-						  type="System.String"
-						  allowAnonymous="false" />
-        <add name="RoleEntityValue"
-             type="System.String"
-             allowAnonymous="false" />
-      </properties>
     </profile>
     <roleManager enabled="true">
       <providers>
