--- a/CascadeSolution/Cascade.Data/Cascade.Data.csproj
+++ b/CascadeSolution/Cascade.Data/Cascade.Data.csproj
@@ -128,6 +128,9 @@
     <Compile Include="Models\MSI_Port_SalesTrans_Original.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\MSI_PutBackForm.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\MSI_RecallForm.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
