--- a/CascadeSolution/Cascade.Web/Web.config
+++ b/CascadeSolution/Cascade.Web/Web.config
@@ -32,10 +32,10 @@
       <menu Id="12" Action="ViewDPS" Controller="DPS" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="2" Text="DPS-View/Edit" Area="Recourse" />
       <menu Id="13" Action="MediaUpload" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="3" Text="Media Upload" Area="Recourse" />
       <menu Id="14" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="4" Text="Media Fulfillment" Area="Recourse"  Parameters="id" ParametersVals="ByAgency" />
-      <menu Id="15" Action="Index" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="6" Text="Recall-Add Form" Area="Recourse" />
+      <menu Id="15" Action="Index" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="6" Text="Recall-Add" Area="Recourse" />
       <menu Id="16" Action="ViewRecall" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="7" Text="Recall-View/Edit" Area="Recourse" />
-      <menu Id="17" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="false" ParentId="0" SortOrder="8" Text="People" Area="People" />
-      <menu Id="18" Action="Index" Controller="Home" Roles="user" IsVisible="false" IsActive="false" ParentId="0" SortOrder="9" Text="Money" Area="Money" />
+      <menu Id="17" Action="PutBackIndex" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="8" Text="Putback-Add" Area="Recourse" />
+      <menu Id="18" Action="ViewPutBack" Controller="Recall" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="9" Text="Putback-View/Edit" Area="Recourse" />
       <menu Id="19" Action="Add" Controller="Home" Roles="user" IsVisible="false" IsActive="false" ParentId="17" SortOrder="1" Text="Add Record" Area="People" />
       <menu Id="20" Action="Add" Controller="Home" Roles="user" IsVisible="false" IsActive="false" ParentId="18" SortOrder="1" Text="Add Record" Area="Money" />
       <menu Id="21" Action="Index" Controller="ViewEdit" Roles="user" IsVisible="false" IsActive="true" ParentId="10" SortOrder="2" Text="View-Edit" Area="Portfolio" />
@@ -66,7 +66,7 @@
       <menu Id="38" Action="MediaRequestNotFulfilled" Controller="Media" Roles="agency" IsVisible="false" IsActive="true" ParentId="35" SortOrder="3" Text="Media Request Not Yet Fulfilled" Area="Recourse" Parameters="id" ParametersVals="ByAgency"/>
       <menu Id="39" Action="Create" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="1" SortOrder="5" Text="Media Request" Area="Recourse" />
       <menu Id="40" Action="Create" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="39" SortOrder="1" Text="Start New Request" Area="Recourse" />
-      <menu Id="41" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="39" SortOrder="2" Text="Update Exisiting Request" Area="Recourse" Parameters="id" ParametersVals="All" />
+      <menu Id="41" Action="MediaRequestNotFulfilled" Controller="Media" Roles="user" IsVisible="false" IsActive="true" ParentId="39" SortOrder="2" Text="Update Exisiting Request" Area="Recourse" Parameters="id" ParametersVals="All" />     
     </cascadeMenu>
   </cascadeCutomGroup>
   <appSettings>
