--- a/CascadeSolution/Cascade.Web/Cascade.Web.csproj
+++ b/CascadeSolution/Cascade.Web/Cascade.Web.csproj
@@ -189,10 +189,6 @@
     <Compile Include="Areas\CRM\Models\Repository\DataRepository.cs" />
     <Compile Include="Areas\InvestorManagement\Controllers\HomeController.cs" />
     <Compile Include="Areas\InvestorManagement\InvestorManagementAreaRegistration.cs" />
-    <Compile Include="Areas\Money\Controllers\HomeController.cs" />
-    <Compile Include="Areas\Money\MoneyAreaRegistration.cs" />
-    <Compile Include="Areas\People\Controllers\HomeController.cs" />
-    <Compile Include="Areas\People\PeopleAreaRegistration.cs" />
     <Compile Include="Areas\Portfolio\Controllers\AddFormController.cs" />
     <Compile Include="Areas\Portfolio\Controllers\HomeController.cs" />
     <Compile Include="Areas\Portfolio\Controllers\ViewEditController.cs" />
@@ -379,10 +375,6 @@
     <Folder Include="Areas\Compliance\Views\Shared\" />
     <Folder Include="Areas\InvestorManagement\Models\" />
     <Folder Include="Areas\InvestorManagement\Views\Shared\" />
-    <Folder Include="Areas\Money\Models\" />
-    <Folder Include="Areas\Money\Views\Shared\" />
-    <Folder Include="Areas\People\Models\" />
-    <Folder Include="Areas\People\Views\Shared\" />
     <Folder Include="Areas\Portfolio\Views\Shared\" />
     <Folder Include="Areas\Recourse\Views\Shared\" />
     <Folder Include="Areas\Reports\Models\" />
@@ -468,19 +460,6 @@
     <Content Include="Areas\InvestorManagement\Views\Home\Index.cshtml" />
     <Content Include="Areas\InvestorManagement\Views\Web.config" />
     <Content Include="Areas\InvestorManagement\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\Money\Views\Home\Add.cshtml" />
-    <Content Include="Areas\Money\Views\Home\Details.cshtml" />
-    <Content Include="Areas\Money\Views\Home\Index.cshtml" />
-    <Content Include="Areas\Money\Views\Home\_moneyRecords.cshtml" />
-    <Content Include="Areas\Money\Views\Web.config" />
-    <Content Include="Areas\Money\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\People\Views\Home\Add.cshtml" />
-    <Content Include="Areas\People\Views\Home\Details.cshtml" />
-    <Content Include="Areas\People\Views\Home\Export.cshtml" />
-    <Content Include="Areas\People\Views\Home\Index.cshtml" />
-    <Content Include="Areas\People\Views\Home\_peopleRecords.cshtml" />
-    <Content Include="Areas\People\Views\Web.config" />
-    <Content Include="Areas\People\Views\_ViewStart.cshtml" />
     <None Include="Areas\Portfolio\Views\AddForm\Index.bak" />
     <Content Include="Areas\Portfolio\Views\AddForm\Index.cshtml" />
     <Content Include="Areas\Portfolio\Views\Home\Index.cshtml" />
@@ -561,6 +540,15 @@
     <Content Include="Views\Shared\_FooterPartial.cshtml" />
     <Content Include="Views\Shared\_LHSMenuPartial.cshtml" />
     <Content Include="Views\Shared\_MenuPartial.cshtml" />
+    <Content Include="Areas\Reports\Views\Recalls\_dpsCheckDetails.cshtml" />
+    <Content Include="Areas\Reports\Views\Recalls\_dpsPaidByOurCheck.cshtml" />
+    <Content Include="Areas\Reports\Views\Recalls\_dpsPayable.cshtml" />
+    <Content Include="Areas\Reports\Views\Recalls\_exportDPS.cshtml" />
+    <Content Include="Areas\Reports\Views\Recalls\_recallsInvoiceLookup.cshtml" />
+    <Content Include="Areas\Reports\Views\Recalls\_recallsPaidByOurCheck.cshtml" />
+    <Content Include="Areas\Reports\Views\Recalls\_recallsPayable.cshtml" />
+    <Content Include="Areas\Reports\Views\Recalls\_recallsReceivable.cshtml" />
+    <Content Include="Areas\Reports\Views\Recalls\_recallsSellerCheckLookup.cshtml" />
     <None Include="ClassDiagram1.cd" />
     <Content Include="Views\Admin\ManageUsers.cshtml" />
     <Content Include="Views\Admin\_users.cshtml" />
